--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-hook-form": "^7.48.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-select": "^5.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
